CHANGELOG

2017-10-17: Added KWOTD functionality. Changes to font family for prefix charts. Fix colour span bug (again).
2017-10-12: Added even more lesson functionality.
2017-10-10: Fix for multi-user database issue (#385) on devices with API 19+.
2017-10-09: Added more lesson functionality.
2017-10-05: Added lesson activity (hidden under preferences).
2017-10-01: Handle swipe to move between search results; put verb before verb stem in results
2017-09-25: Add opening monologue of DSC, make misc. edits related to DSC
2017-09-24: Fix tablet layout bug, make database IDs sequential without gaps, misc lint fixes
2017-09-20: allow edit of mistyped input, selection of text, search in {pIqaD}
2017-09-18: move v2 to main version; bug fixes
2017-09-16: alpha release of v2
2017-09-14: Target new version to API 26 and above. (For one, it allows us to not deal with the Jelly Bean span bug, which still exists. Also, "tlh" as a locale does not exist on older devices.)
2017-09-10: Migrated from ant to gradle (deprecate support of API below 16). Bug fixes. Enabled TTS always.
2017-09-10: Removed "float" mode. This was not being used and was confusing users.
2017-09-08: Misc. edits.
2017-08-20: Add (almost all) Klingon lines from movies as entries.
2017-08-14: Renumber entry IDs as part of clean-up to prep for DSC (Star Trek: Discovery) entries.
2017-08-09: Last version (maybe) before freezing development.
2017-08-06: Links and edits to weather words.
2017-08-03: More German notes translated. Fixed errors in a few entries.
2017-08-01: Add German examples. Add names from STLV. Fixed some typos.
2017-07-31: New words from qep'a' 2017 and Star Trek: Discovery, including German translations.
2017-07-25: Make German the primary language when option is selected.
2017-07-18: Enabled German search tags and notes in database.
2017-07-13: Added vocabulary about marriage.
2017-07-12: Added 2 entries from the {paq'batlh}.